--- a/README.Rmd
+++ b/README.Rmd
@@ -9,22 +9,24 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 # WBdif
-Development of **WBdif** was motivated by questions regarding the psychometric properties of  early childhood development assessments used as outcome measures in impact evaluations. This package provides methods for (a) evaluating differential item functioning (DIF),  (b) checking whether DIF leads to biased treatement effects on the unweighted total score or IRT-based scoring methods, and (c) providing DIF-corrected treatment effects by either removing biased items (for the unweighted total score) or using an IRT models that adjusts for the item bias (for IRT-based scoring). The methods are documented in the report: (forthcoming).  
 
-The methods for evaluating DIF include semi-parametric regression, the Mantel-Haenszel test, logistic regression, and multi-group item response theory (IRT).  
+## Summary 
+Development of **WBdif** was motivated by questions regarding the psychometric properties of  early childhood development assessments used as outcome measures in impact evaluations. This package provides methods for (a) evaluating differential item functioning (DIF),  (b) checking whether DIF leads to biased treatment effects on the unit-weighted total score or IRT-based scoring methods, and (c) providing DIF-corrected treatment effects by either removing biased items (for the unit-weighted total score) or using an IRT models that adjusts for the item bias (for IRT-based scoring). The methods are documented in the report: (forthcoming).  
 
-DIF may be evaluated with respect to the treatment variable, or with respect to pre-treatment variables used to examine treatment hetergeneity (e.g., gender, age, and socio-economic status). The **WBdif** documentation refer to these as unconditional and conditional treatment effects,  respectively.
+The methods for evaluating DIF include semi-parametric regression (LOESS), the Mantel-Haenszel test, logistic regression, and multi-group item response theory (IRT).  
 
-If assessment items have DIF with respect to treatment, the unconditional treatment effect *may* be biased. The intuitive interpretation here is that the treatment effect varies over the assessment items, so reporting the treatment effect on an aggregate score (e.g., the unweighted total score) may not reflect "true" effect on the construct of interest. 
+DIF can be evaluated with respect to the treatment variable, or with respect to pre-treatment variables used to examine treatment heterogeneity (e.g., gender, age, and socio-economic status). The **WBdif** documentation refer to these as unconditional and conditional treatment effects,  respectively.
 
-If the assessment items have DIF with respect to a conditiong variable (e.g., gender), the corresponding conditional treatement effects (e.g., the effect just for males, just for females, or their difference) *may* be biased. In other words, randomization of treatement does not protect conditional treatment effects from DIF with respect to the conditionin variable. 
+If assessment items have DIF with respect to treatment, the unconditional treatment effect *may* be biased. The intuitive interpretation here is that the treatment effect varies over the assessment items, so reporting the treatment effect on an aggregate score (e.g., the unit-weighted total score) may not reflect "true" effect on the construct of interest. 
 
-**WBdif** provides two general workflows, both of which are illustrated below. In the "basic" workflow, the user preps the data and then calls an omnibus function (`summary_report`) that automates the DIF analysis and, if there is any DIF detected, the evaluation of treatment effects. The results are summarized in an .HTML formatted report. 
+If the assessment items have DIF with respect to a conditioning variable (e.g., gender), the corresponding conditional treatment effects (e.g., the effect just for males, just for females, or their difference) *may* be biased. In other words, randomization of treatment does not protect conditional treatment effects from DIF with respect to the conditioning variable. 
 
-In the "advanced" workflow, all the steps automated by `summary_report` can be implemented directly by the user, which gives more control over which DIF analyses are conducted and which items are identified as biased. The advanced workflow is currently under construction, as the output returned by most functions is not very user-friendly. In the future, these outputs may be converted to S3 or S4 objects with methods (e.g., print, summary) that make them more user-friendly. 
+**WBdif** provides two general workflows, both of which are illustrated below. In the "basic" workflow, the user preps the data and then calls an omnibus function (`summary_report`) that automates the DIF analysis and, if there is any DIF detected, computes the treatment effects with and without adjusting for DIF. The results are summarized in an .HTML formatted report. 
+
+In the "advanced" workflow, the steps automated by `summary_report` can be implemented directly by the user, which gives more control over which DIF analyses are conducted and which items are identified as biased. The advanced workflow is currently under construction, as the output returned by most functions is not very user-friendly. In the future, these outputs may be converted to S3 or S4 objects with methods (e.g., print, summary) that make them more user-friendly. 
 
 
-**WBdif** is in the alpha stage of development. Please report any bugs by opening an issue at (https://github.com/knickodem/WBdif).
+**WBdif** is in the alpha stage of development. Please report any bugs or suggestions by opening a [Github issue](https://github.com/knickodem/WBdif/issues).
 
 
 ## Installation
@@ -36,114 +38,108 @@ library(WBdif)dev
 ```
 
 
-## Features
+## Basic workflow {#aio}
 
-Say you have a measure with both dichotomous and polytomous items and you want to know:
+The basic workflow requires only two functions: 
 
-  1. Do any items show DIF by gender?
-  2. What method should I use to detect DIF?
-  3. What is the treatment effect of the intervention?
-  4. Does the treatment effect change when accounting for biased (DIF-y) items?
-  
-**WBdif** has functionality to accommodate two approaches to answering these questions depending on your motivations and the nature of the measure (assessment/instrument/test).
+* `dif_data_prep()` is a pre-processing step that organizes input information for use in other **WBdif** functions and conducts some checks on the data. How the data is prepared effects the type of report that will be produced. In general, different reports require different data preps. 
 
-### All-in-One {#aio}
+* `summary_report()` is a wrapper around all of the other functions needed to run the analysis and produce the report. The function offers a variety of options to customize the both the analysis and reporting. For more details on each option see the [Advanced workflow](#sbs) section. Given the All-in-One nature of `summary_report()`, the code will usually take a several minutes to run before producing the report.
 
-The first approach requires only two functions (`dif_data_prep()` and `summary_report()`) and produces an HTML report summarizing the DIF analysis results from up to 4 methods along with tables and plots illustrating treatment effects with and without adjusting for item bias.
+### Unconditional Treatment Effects
 
-`dif_data_prep()` is a pre-processing step that organizes input information for use in other **WBdif** functions and conducts some checks on the suitability of the data for a DIF analysis. When investigating treatment effect robustness, `dif_data_prep()` is also where you specify:
+When the user is interested to assess DIF with respect to the treatment variable and evaluate robustness of the unconditional treatment effects, only `dif.group.id` need be supplied to `dif_data_prep()`.  Alternatively, one may provide the same variable for `dif.group.id` and `tx.group.id`. However, if different variables are provided to `dif.group.id` and `tx.group.id`, then conditional treatment effects are estimated instead (see below). The function `summary_report()` recognizes how the data are prepared and estimates the appropriate treatment effects. 
 
- - whether the treatment effects are unconditional (i.e., only comparing treatment group to control group) or conditional on another variable (e.g., gender, race, age)
- - which standard deviation to use in the denominator of the treatment effect size estimation (`std.group`)
- - whether the data is clustered
- 
-`summary_report()` is then a wrapper around all of the other functions needed to run the analysis and produce the report (hence All-in-One). Nonetheless, the function offers a variety of options to customize the both the analysis and reporting. For more details on each option see the [Step-by-Step](#sbs) section. Given the All-in-One nature of `summary_report()`, the code may take a few minutes to run before producing the report.
+The code below uses the built-in data set "mdatlang" to generate [this report](https://htmlpreview.github.io/?https://github.com/knickodem/WBdif/blob/master/DIF-Effects-Tx-MDAT-Language.html). 
 
-**Conditional Treatment Effects**
+```{r, eval = FALSE}
+# Load the example data (MDAT language assessment, collected in Malawi). 
+data("mdatlang")
 
-Below we specify both `tx.group.id` and `dif.group.id` indicating that we are interested in estimating the treatment effects conditional on gender. The code below generates [this report](https://htmlpreview.github.io/?https://github.com/knickodem/WBdif/blob/master/DIF-Effects-Gender-MDAT-Language.html).
+mdat_tx <- dif_data_prep(item.data = mdatlang[5:ncol(mdatlang)],
+                         dif.group.id = mdatlang$treated,
+                         tx.group.id = mdatlang$treated,
+                         cluster.id = mdatlang$clusterid,
+                         std.group = "Control") # "Control" is a value in mdatlang$treated
+
+summary_report(dif.data = mdat_tx,
+               file.name = "DIF-Effects-Tx-MDAT-Language",
+               report.type = "dif.effects",
+               report.title = "MDAT Language: DIF by treatment condition",
+               measure.name = "MDAT Language",
+               dataset.name = "Malawi")
+```
+
+### Conditional Treatment Effects
+
+When the user is interested to assess DIF with respect to a conditioning variable (e.g., gender) and evaluate robustness of the conditional treatment effects (e.g., for just the females, for just the males, and their difference), then both `dif.group.id` and `tx.group.id`need to be supplied to `dif_data_prep()`. If the same variable is provided to `dif.group.id` and `tx.group.id`, then unconditional treatment effects are estimated instead (see above).
+
+Below we specify both `dif.group.id` and a different `tx.group.id`. The code below generates [this report](https://htmlpreview.github.io/?https://github.com/knickodem/WBdif/blob/master/DIF-Effects-Gender-MDAT-Language.html).
 
 ```{r, eval = FALSE}
 data("mdatlang")
 
-conditional <- dif_data_prep(item.data = mdatlang[5:ncol(mdatlang)],
-                         tx.group.id = mdatlang$treated,
-                         dif.group.id = mdatlang$gender,
-                         cluster.id = mdatlang$clusterid,
-                         std.group = NULL, # When NULL, the pooled standard deviation is used
-                         na.to.0 = TRUE)
+mdat_gender <- dif_data_prep(item.data = mdatlang[5:ncol(mdatlang)],
+                             dif.group.id = mdatlang$gender,
+                             tx.group.id = mdatlang$treated,
+                             cluster.id = mdatlang$clusterid,
+                             std.group = "Control") 
 
-summary_report(dif.data = conditional,
-             report.type = "dif.effects",
-             report.title = "Gender DIF Effects on MDAT Language",
-             measure.name = "MDAT Language",
-             file.name = "DIF-Effects-Gender-MDAT-Language",
-             dataset.name = "Malawi",
-             methods = c("loess", "MH", "logistic", "IRT"),
-             bias.method = "IRT",
-             match.type  = "Total")
+summary_report(dif.data = mdat_gender,
+               file.name = "DIF-Effects-Gender-MDAT-Language",
+               report.type = "dif.effects",
+               report.title = "MDAT Language: DIF by gender",
+               measure.name = "MDAT Language",
+               dataset.name = "Malawi")
+
 ```
 
-**Unconditional Treatment Effects**
 
-When interested in unconditional effects, only one of `tx.group.id` or `dif.group.id` need to be supplied in `dif_data_prep()`.  `summary_report()` recognizes how the data are prepared and estimates the appropriate treatment effect. Thus, from an analysis standpoint, `dif.data` is the only argument that needs to be changed in `summary_report()`. Naturally, adjusting `report.title` helps clarify which analysis was conducted and and revising `file.name` prevents your previous reports from being overwritten. The code below generates [this report](https://htmlpreview.github.io/?https://github.com/knickodem/WBdif/blob/master/DIF-Effects-Tx-MDAT-Language.html).
+## Advanced workflow {#sbs}
 
-```{r, eval = FALSE}
-data("mdatlang")
+The advanced workflow shows what is going on under the hood of  `summary_report()` and lets the user have more control over which items are identified as biased in the report. In this section we work through the conditional treatment effect example given in more detail. 
 
-unconditional <- dif_data_prep(item.data = mdatlang[5:ncol(mdatlang)],
-                         tx.group.id = mdatlang$treated,
-                         dif.group.id = NULL,
-                         cluster.id = mdatlang$clusterid,
-                         std.group = "Control", # "Control" is a value in mdatlang$treated
-                         na.to.0 = TRUE)
+The first recommended step is still `dif_data_prep()`, which operates in the same manner as the [Basic workflow](#aio). This step is repeated below. 
 
-summary_report(dif.data = unconditional,
-             report.type = "dif.effects",
-             report.title = "Tx DIF Effects on MDAT Language",
-             measure.name = "MDAT Language",
-             file.name = "DIF-Effects-Tx-MDAT-Language",
-             dataset.name = "Malawi",
-             methods = c("loess", "MH", "logistic", "IRT"),
-             bias.method = "IRT",
-             match.type  = "Total")
-```
-
-### Step-by-Step {#sbs}
-
-If want to examine the components contributing to `summary_report()`, you can conduct the analysis and reporting one step at a time. The first recommended step is still `dif_data_prep()`, which operates in the same manner as the [All-in-One](#aio) approach. Once again we have specified both `tx.group.id` and `dif.group.id` to indicate we are interested in DIF by Gender and the conditional treatment effects.
 
 ```{r, message = FALSE, warning = FALSE}
 library(WBdif)
 data("mdatlang")
-prepped <- dif_data_prep(item.data = mdatlang[5:ncol(mdatlang)],
-                         tx.group.id = mdatlang$treated,
-                         dif.group.id = mdatlang$gender,
-                         cluster.id = mdatlang$clusterid,
-                         std.group = NULL, # When NULL, the pooled standard deviation is used
-                         na.to.0 = TRUE)
+
+mdat_gender <- dif_data_prep(item.data = mdatlang[5:ncol(mdatlang)],
+                             tx.group.id = mdatlang$treated,
+                             dif.group.id = mdatlang$gender,
+                             cluster.id = mdatlang$clusterid,
+                             std.group = "Control")
 ```
 
-**DIF Analysis**
+### DIF Analysis
 
-The next step is typically `dif_analysis()`, which evaluates DIF by the two groups in `dif.group.id` with up to 4 DIF methods:
+The `dif_analysis()` function explores DIF with respect to the `dif.group.id` using various methods. The goal is to arrive at an overall picture of the data that does not depend on the assumptions of any one particular method. Four DIF methods are available for dichotomous data, but only semi-parametric regression and IRT can be used with multi-category ("polytomous") assessment items.  
 
- - LOESS regression - Generates plot of response curves for the two groups on each item. DIF is determined through visual inspection of differences in the groups' response curves.
- - Mantel-Haenszel (MH) Test - *only available for dichotomous items* - In a two-stage (Initial detection and Refinement stages) process, identifies biased items by conducting a Mantel-Haenszel test via `stats::mantelhaen.test()` for each item grouped by `dif.group.id` and stratified by raw total score (`match.type = "Total"`) or raw score removing the item under investigation (`match.type = "Rest"`).
- - Logistic regression - *only available for dichotomous items* - First conducts an omnibus test of DIF by comparing fit of no DIF, uniform DIF, and non-uniform DIF logistic regression models. If the model comparisons suggest DIF, biased items are identified by fitting a separate logistic regression model on each item during an initial detection stage and refinement stage.
- - Item Response Theory (IRT) - First conducts an omnibus test of DIF by comparing the fit of no DIF, uniform DIF, and non-uniform DIF 2PL IRT models via `mirt::multiGroup()`. If the model comparisons suggest DIF, biased items are identified by iteratively freeing parameters and testing model fit using `mirt::DIF()`.
+ - LOESS regression - Generates plot of response curves for the two groups on each item. DIF is determined through visual inspection of differences in the groups' response curves.\
  
-Each method has its own function (`dif_loess()`, `dif_mh()`, `dif_logistic()`, and `dif_irt()`), which is called by `dif_analysis()`. One common issue in the MH method is low response rates for a certain group on a particular item at a given score. A common remedy is bin the scores, such as by deciles, as shown in the code below.
+ - Mantel-Haenszel (MH) Test - *only available for dichotomous items* -  Biased items are identified by conducting a Mantel-Haenszel test (`stats::mantelhaen.test()`) for each item by  `dif.group.id` table, stratified by either the unit-weighted total score (`match.type = "Total"`) or the unit-weighted total score computed after removing the item under investigation (`match.type = "Rest"`). Analysis proceeds in two stages, an initial "Purification" stage that tentatively identifies DIF-fy items, and a second "Refinement" stage which removes the tentatively-identified items from the matching variable. The results of the second stage are considered more definitive. One common problem that arises when using the MH test is when there are empty cells in the stratified two-way tables. A common remedy is bin the stratifying variable (e.g., by deciles), as shown in the code below. 
+ 
+ - Logistic regression - *only available for dichotomous items* - First conducts an omnibus test of DIF by comparing fit of no DIF, uniform DIF, and non-uniform DIF logistic regression models. If the model comparisons suggest DIF, biased items are identified by fitting two models for each item: one where all items parameters are held constant over groups, and one where the item in question interacts with `dif.group.id`. Depending on the type of DIF identified in the omnibus test, the intercept (uniform DIF) or the intercept and slope (non-uniform DIF) may be interacted with `dif.group.id`. The item-by-item testing uses the two-stage purification and refinement approach described above.  
+ 
+ - Item Response Theory (IRT) - First conducts an omnibus test of DIF by comparing the fit of no DIF, uniform DIF, and non-uniform DIF models via `mirt::multiGroup()`. If the model comparisons suggest DIF, biased items are identified in the same way as described for logistic regression, which is implemented using the `drop` scheme of `mirt::DIF()`, with the exception that the Refinement stage does not make any of items dropped in the Purification stage. The same functionality can be achieved using `mirt::DIF()` using the `drop_sequential` scheme with `max_run = 2`.
+ 
+Each method has its own low-level function (`dif_loess()`, `dif_mh()`, `dif_logistic()`, and `dif_irt()`), which are called by `dif_analysis()`. 
  
 ```{r, message = FALSE, warning = FALSE, results='hide'}
-dif.analysis <- dif_analysis(dif.data = prepped,
+dif.analysis <- dif_analysis(dif.data = mdat_gender,
                             methods =  c("loess", "MH", "logistic", "IRT"),
-                            match.type = "Rest",
-                            match.bins = seq(0, 1, by = .1))
+                            match.type = "Total",
+                            match.bins = seq(0, 1, by = .1)) # use deciles of matching var in MH
+
+# View the biased items reported by "MH", "logistic", or "IRT" methods
+extract_biased_items(dif.analysis)
+
 ```
 
 
-If you only want a report of the DIF analysis and the treatment effect estimates are not of interest, a report including only the DIF results can be generated by setting `report.type = "dif.only"` in the `dif_report()` function. The report enables comparison of the DIF methods with one method highlighted via the `bias.method` argument ([example report](https://htmlpreview.github.io/?https://github.com/knickodem/WBdif/blob/master/DIF-Only-Gender-MDAT-Language.html)).
+If the treatment effect estimates are not of interest, a report of the DIF analysis can be generated by setting `report.type = "dif.only"` in  `dif_report()`. The report enables comparison of the DIF methods with one method highlighted via the `bias.method` argument ([example report](https://htmlpreview.github.io/?https://github.com/knickodem/WBdif/blob/master/DIF-Only-Gender-MDAT-Language.html)).
 
 ```{r, message = FALSE, warning = FALSE, eval=FALSE}
 dif_report(dif.analysis = dif.analysis,
@@ -153,30 +149,64 @@ dif_report(dif.analysis = dif.analysis,
            file.name = "DIF-Only-Gender-MDAT-Language",
            dataset.name = "Malawi",
            bias.method = "IRT")
+
 ```
 
 
-**Treatment Effect Estimation**
+### DIF Models
 
-`effect_robustness()` estimates treatment effects using both a raw total score approach and an IRT model-based scoring approach. To do so, `dif_models()` is run first to gather and estimate the necessary IRT models. Typically, the inputs to `dif_models()` are the output from `dif_analysis()` and from which DIF method ("logistic", "MH", or "IRT") to extract the identified biased items. However, if you are interested in testing the impact of particular items, you can specify in `biased.items` a vector of the column indices in the data for the items you want to check along with `dif_data_prep()` object to `dif.data`.
+The function `dif_models()` estimates a "confirmatory" multigroup IRT model in which the parameters of user-specified items are allowed to vary over levels of `dif.group.id`. This model is used to generate the IRT-based scores for the assessment, which in turn are used to compute the treatment effects (see below). 
 
-The output from `dif_models()` is then used in `effect_robustness()` to estimate the treatment effects and their robustness in the presence of biased items. Which effects and how they are estimated is largely dictated by the information supplied to `dif_data_prep()`, which is passed to `effect_robustness()` from `dif_models()`. This includes:
+The user specifies biased items using the `biased.items` argument. This can be the name one of the DIF methods used by `dif_analysis`, in which case any items identified by that method are treated as biased. Alternatively, the user can specify a custom list of biased items in terms of a numeric vector that indexes the columns of `item.data`. The basic workflow does not provide this user customizable functionality for identifying DIF-fy items. 
 
- - unconditional or conditional treatment effects
- - the standard deviation used to standardize the effect size
- - whether the effect sizes and their standard errors are adjusted for the clustering of observations
+In the example below, all items identified by any method of `dif_analysis()` are specified as biased. Some supporting graphics for `dif_models` depict the test bias function. 
 
-```{r, message = FALSE, warning = FALSE, results='hide'}
-    dif.models <- dif_models(dif.analysis = dif.analysis, dif.data = NULL, biased.items = "logistic")
-    effect.robustness <- effect_robustness(dif.models = dif.models, std.group = prepped$std.group, irt.scoring = "WLE")
+```{r}
+biased.items <- Reduce(unique, extract_biased_items(dif.analysis))
+dif.models <- dif_models(dif.analysis = dif.analysis, biased.items = biased.items)
+bias.plots <- bias_plots(dif.models)
+gridExtra::grid.arrange(bias.plots[[1]], bias.plots[[2]])
 ```
 
-A report with just the robustness of treatment effect estimates to biased items, but no DIF analysis information, can be requested from `dif_report()` by setting `report.type = "effects.only"` and providing objects returned from `dif_models()` and `effect_robustness()`. More often, the DIF analysis results are also of interest, in which case `report.type = "dif.effects"` and the `dif_analysis()` object must be supplied. The format and data for the [report generated here](https://htmlpreview.github.io/?https://github.com/knickodem/WBdif/blob/master/Logistic-Gender-MDAT-Language.html) is the same as the Conditional Treatment Effects report in the [All-in-One](#aio) section, but the DIF methods used are different (logistic vs. IRT; rest scores vs total scores). Comparing the reports gives an indication of the impact of analysis decisions on conclusions regarding treatment effects.
+### Treatment Effect Estimation
+
+The last step in this workflow is to estimate standardized treatment effects, with and without adjustments for DIF. Treatment effects and their standard errors are computed using the method described by Hedges (2007), which is applicable to cluster-randomized designs as well as simple random samples. 
+
+Treatment effects and their standard errors are reported for four different outcome variables.
+
+* The unit-weighted total score computed with all items.
+
+* The unit-weighted total score computed with DIF-fy items omitted (i.e. the items identified in dif.models$biased.items).
+
+* IRT scores computed using a model that constrains all items to have equal parameters over levels of dif.group.id (ie., dif.models$no.dif.mod) .
+
+* IRT scores computed using a model that allows parameters of DIF-fy items to vary over levels of dif.group.id (ie., dif.models$dif.mod).
+
+The information supplied to `dif_data_prep()` (which is passed to `effect_robustness()` through `dif.models`) provides additional details about how the treatment effects are computed 
+
+
+ * Treatment effects are computed for `tx.group.id`. If `tx.group.id == dif.group.id` unconditional treatment effects are reported. Otherwise treatment effects are computed condition on `dif.group.id`. 
+ * The standard deviation used to standardize the effect size is given by `std.group`
+ * If `cluster.id` is provided, effect sizes and their standard errors are adjusted for a  multi-stage sampling design in which `cluster.id` is the primary sampling unit. 
+ 
+In our example, we will be examining treatment effects conditional on gender, using the control group to standardize the effects, and clustering based on the `clusterid` variable from the `mdatlang` data. Some supporting plots for Some support functions for `effects_robutness` tabulate the effects and provide forest plots  
+
+```{r, message = FALSE, warning = FALSE}
+effect.robustness <- effect_robustness(dif.models = dif.models, irt.scoring = "WLE")
+lapply(effect.robustness, effects_plot)
+
+effects.tables <- lapply(effect.robustness, effects_table)
+knitr::kable(effects.tables[[1]], digits = 2, caption = names(effects.tables)[[1]])
+knitr::kable(effects.tables[[2]], digits = 2, caption = names(effects.tables)[[2]])
+knitr::kable(effects.tables[[3]], digits = 2, caption = names(effects.tables)[[3]])
+```
+
+A report with just the robustness of treatment effect estimates to biased items, but no DIF analysis information, can be requested from `dif_report()` by setting `report.type = "effects.only"` and providing objects returned from `dif_models()` and `effect_robustness()`. More often, the DIF analysis results are also of interest, in which case `report.type = "dif.effects"` and the `dif_analysis()` object must be supplied. This done using the code provided below, which produced the [report generated here](https://htmlpreview.github.io/?https://github.com/knickodem/WBdif/blob/master/Logistic-Gender-MDAT-Language.html)
 
 ```{r, message = FALSE, warning = FALSE, eval=FALSE}
 dif_report(dif.analysis = dif.analysis,
            dif.models = dif.models,
-           effect.robustness = effect.robustness,
+           effect.robustness = effects,
            report.type = "dif.effects",
            report.title = "Gender DIF in MDAT Language",
            measure.name = "MDAT Language",
@@ -186,6 +216,11 @@ dif_report(dif.analysis = dif.analysis,
 ```
 
 
+### References
+
+Hedges, L. V. (2007). Effect Sizes in Cluster-Randomized Designs. Journal of Educational and Behavioral Statistics, 32, 341–370. https://doi.org/10.3102/1076998606298043.
+
+
 ## Support and Suggestions
 
-If you encounter any issues or have a suggestion for additional features, please file a [Github issue](https://github.com/knickodem/WBdif/issues) or contact us via email.
+If you encounter any issues or have a suggestion for additional features, please file a [Github issue](https://github.com/knickodem/WBdif/issues).
